# nfactorial-homeworks

./: .env  Instagram ER Model, Diagram.docx  README.md  database.db  file3.txt  hw sql.sql  hw.py  hw_bonus.py  main.py  test_hw.py  test_hw_bonus.py
HW_1_wsgi_fastapi/: fastapi-hello.py  fastapi-meaning-life.py  fastapi-nfactorial.py  server-ping-pong.py  server-request-info.py
OneDrive/: desktop.ini
alembic/: env.py
alembic/versions/: a30c41f397ee_create_users_table.py
app/: database.py  schemas.py
app/routers/: auth.py  cart.py  flowers.py
assignment 10-11/: hw.py  hw_bonus.py
assignment 12/: hw.py  hw_bonus.py
assignment14/: pyproject.toml  test_main.py
assignment14/tests/: test_assignment14.py
assignment15/: hw.py  hw_bonus.py  test_hw.py  test_hw_bonus.py
assignment6/: main.py
assignment7/: test_hw.py
assignment8/: hw.py  hw_bonus.py
assignment9/: hw_bonus.py
cars/: README.md  pyproject.toml
cars/cars/: main.py  models.py  repositories.py
cars/templates/: list.html  new.html  search.html
hw-16/: hw.py  test_hw.py
hw-backend-2/cars/: pyproject.toml
hw-backend-2/cars/app/: main.py
hw-backend-2/users/: pyproject.toml
hw-backend-2/users/app/: main.py
hw-backend-2/users/templates/users/: index.html  user.html
hw-backend-4/: README.md
hw-backend-4-5/app/: main.py  repository.py
hw-backend-4-5/templates/books/: edit.html  index.html  new.html
hw-backend-4/app/: main.py  repository.py
hw-backend-4/templates/books/: index.html  list.html
hw13/: pyproject.toml
hw13/myproject/: settings.py
hw13/nfactorial/: urls.py  views.py
hw14/: db.sqlite3  pyproject.toml
hw14/news/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
hw14/news/migrations/: 0001_initial.py  0002_comment_author_news_author.py
hw14/news_service/: asgi.py  settings.py  urls.py  wsgi.py
hw6/: README.md  main.py  pyproject.toml
hw7/: README.md  main.py  pyproject.toml
hw8/: .gitignore  Dockerfile  README.md  alembic.ini  requirements.txt
hw8/app/: dependencies.py  models.py
hw8/scripts/: launch.sh
sql_hw/: hw.sql
vox/: main.py  pyproject.toml
(+18 files in other folders)
