[tool.poetry]
name = "assignment14"
version = "0.1.0"
description = ""
authors = ["Gulnara <gulnarkaz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
