[project]
name = "cars"
version = "0.1.0"
description = ""
authors = [
    {name = "Gulnara",email = "gulnarkaz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic (>=2.10.5,<3.0.0)"
]
[tool.poetry.dependencies]
python = ">=3.10" 
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
faker = "^18.3.0"
jinja2 = "^3.1.0" 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
