[project]
name = "hw7"
version = "0.1.0"
description = ""
authors = [
    {name = "Gulnara",email = "gulnarkaz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "update (>=0.0.1,<0.0.2)",
    "attrs (>=25.1.0,<26.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "jwt (>=1.3.1,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
