[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
faker = "^18.11.2"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"

pytest = "^7.4.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
